# Logram

./: .gitignore  CLAUDE.md  Jenkinsfile  README.md
.github/workflows/: build.yml
Logram/: App.swift  Info.plist  Logram.entitlements
Logram.xcodeproj/: project.pbxproj
Logram.xcodeproj/xcshareddata/xcschemes/: Logram.xcscheme
Logram/Assets.xcassets/Levels/level_auth.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_cache.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_call.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_clnt.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_cust1.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_cust2.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_cust3.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_cust4.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_db.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_dddER.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_dddIN.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_debug.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_enter.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_error.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_exc.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_excOs.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_fail.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_http.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_info.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_leave.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_mem.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_mon.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_osErr.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_res.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_ret.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_rotat.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_sql.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_srvr.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_stack.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_trace.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_unknown.imageset/: Contents.json
Logram/Assets.xcassets/Levels/level_warn.imageset/: Contents.json
Logram/Models/: ColorTheme.swift  LogDocument.swift  LogLevel.swift  LogLine.swift  LogParser.swift
Logram/Views/: ContentView.swift  FilterSidebar.swift  LineDetailView.swift  LogLinesView.swift  MethodTimingView.swift  StatsView.swift
LogramLinux/: CMakeLists.txt
LogramLinux/resources/: com.unitybase.Logram.desktop  logram.gresource.xml
LogramLinux/src/: main.cpp
LogramLinux/src/ui/: App.cpp  App.h  DetailPanel.cpp  DetailPanel.h  FilterSidebar.cpp  FilterSidebar.h  LogTableView.cpp  LogTableView.h  MainWindow.cpp  MainWindow.h  StatsDialog.cpp  StatsDialog.h  Theme.cpp  Theme.h  TimingDialog.cpp  TimingDialog.h
LogramWin/: CMakeLists.txt  Logram.rc  app.manifest  resource.h
LogramWin/build-mac/: parser_tests
LogramWin/build-mac/parser_tests.dSYM/Contents/Resources/DWARF/: parser_tests
LogramWin/build-mac/parser_tests.dSYM/Contents/Resources/Relocations/aarch64/: parser_tests.yml
LogramWin/src/: main.cpp  pch.h
LogramWin/src/core/: LogDocument.cpp  LogDocument.h  LogLevel.cpp  LogLevel.h  LogLine.h  LogParser.cpp  LogParser.h  MappedFile.cpp  MappedFile.h  Observer.h
LogramWin/src/infra/: Clipboard.cpp  Clipboard.h  Dpi.cpp  Dpi.h  ImageUtils.cpp  ImageUtils.h  Settings.cpp  Settings.h  Utf.cpp  Utf.h
LogramWin/src/sql/: JsonPretty.cpp  JsonPretty.h  SqlFormatter.cpp  SqlFormatter.h  SqlParamSubst.cpp  SqlParamSubst.h  SqlStats.cpp  SqlStats.h
LogramWin/src/ui/: App.cpp  App.h  DetailPanel.cpp  DetailPanel.h  FilterSidebar.cpp  FilterSidebar.h  LogTableView.cpp  LogTableView.h  MainWindow.cpp  MainWindow.h  Splitter.cpp  Splitter.h  StatsDialog.cpp  StatsDialog.h  StatusBar.cpp  StatusBar.h  ThemeColors.cpp  ThemeColors.h  TimingDialog.cpp  TimingDialog.h
LogramWin/tests/: parser_tests.cpp
LogramWin/tests/golden/: README.md  mormot1_basic.expected.ndjson
LogramWin/tools/: golden_gen.swift
landing/: index.html  robots.txt  sitemap.xml
landing/assets/: app.js  styles.css
landing/docs/: index.html
landing/en/: index.html
landing/en/docs/: index.html
landing/ru/: index.html
landing/ru/docs/: index.html
